06-gloo-gateway/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: lattice-inventory-vs
  namespace: default
spec:
  virtualHost:
    domains:
      - "*"
    routes:
      - matchers:
          - prefix: /inventory
        routeAction:
          single:
            upstream:
              name: inventory-upstream
              namespace: default
        options:
          autoHostRewrite: true
          prefixRewrite: "/"
